[package]
name = "cosmic_pinger"
version = "0.2.0"
edition = "2021"

[dependencies]
ksni = "0.2"
iced = { version = "0.12", features = ["tokio"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
directories = "5" # Para achar a pasta correta de config no Linux
notify-rust = "4"