[package]
name = "cosmic_pinger"
version = "0.3.0"
edition = "2021"
description = "System tray app to monitor hosts and websites via ping/HTTP"
license = "MIT"
repository = "https://github.com/ttavares369/cosmic_pinger"
keywords = ["monitoring", "ping", "tray", "cosmic", "pop-os"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
ksni = "0.2"
iced = { version = "0.12", features = ["tokio"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
directories = "5" # Para achar a pasta correta de config no Linux
notify-rust = "4"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true